[package]
name = "clarity-chumsky"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ariadne = "0.3.0"
chumsky = "1.0.0-alpha.6"
clap = { version = "4.4.6", features = ["derive"] }
clarity = { path = "../../stacks-network/stacks-blockchain/clarity" }
logos = "0.13.0"