[package]
name = "clarity-chumsky"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ariadne = "0.3.0"
bigint = "4.4.3"
chumsky = { version = "1.0.0-alpha.6", features = ["label", "either", "regex"] }
clap = { version = "4.4.6", features = ["derive"] }
clarity = { path = "../../stacks-network/stacks-blockchain/clarity" }
internment = "0.7.1"
lazy_static = "1.4.0"
logos = "0.13.0"
num-bigint = "0.4.4"
regex = "1.10.0"
thiserror = "1.0.49"
